Closes #2953: Fix possibly misaligned main menu in header in extensions (#2954)

--- a/fairchive-webapp/src/main/webapp/resources/vecler/theme-base.scss
+++ b/fairchive-webapp/src/main/webapp/resources/vecler/theme-base.scss
@@ -2434,6 +2434,14 @@ body:not(.high-contrast-yellow-on-black) .superior-logo.contrast {
 				background: #e8e8e8;
 			}
 	}
+
+	/* Fix misaligned main menu in top navbar */
+
+    .navbar-default #topNavBar.collapse.navbar-collapse {
+        display: flex !important;
+        flex-direction: column;
+        align-items: flex-end;
+    }
 }
 
 /* Accessibility controls */
